# MiType-OS

./: .gitignore  .npmrc  App.tsx  JD.json  LICENSE  Profile Library.txt  README.md  assessment_console_app.py  constants.ts  index.css  index.html  index.tsx  main.py  metadata.json  mi_type_profiles.py  mite.py  mitime.py  package-lock.json  package.json  pyproject.toml  requirements.txt  ripple_animation.py  types.ts
.github/workflows/: webpack.yml
App/: main.py  server.py
components/: AccessTierSelector.tsx  AccessibilitySettings.tsx  AdaptiveCycle.tsx  AssessmentQuestionSelector.tsx  BackupDashboard.tsx  Button.tsx  Card.tsx  CircuitBreaker.tsx  ClinicianAccess.tsx  HBDIAssessment.tsx  HBDIResultsScreen.tsx  LoadingSpinner.tsx  Logo.tsx  MBTIAssessment.tsx  MBTIResultsScreen.tsx  MTraAssessment.tsx  MTraResultsScreen.tsx  MiChatAssistant.tsx  MiHomeHub.tsx  MiMap.tsx  MiOS.tsx  MiShiftGym.tsx  MiSound.tsx  MiTools.tsx  MindWorkout.tsx  Modal.tsx  NeuralTransition.tsx  NoiseImage.tsx  NoiseProvider.tsx  SettingsDashboard.tsx  TfmAuditConsole.tsx  ThemeSelector.tsx  WelcomeScreen.tsx
components/games/: ElementCaptureGame.tsx  FoldingSquareLoader.tsx  PatternChallengeGame.tsx  PatternInterruptGame.tsx  RapidPatternRecognition.tsx  RecallClockGame.tsx  (+2 more)
experiments/: Newtype.py  mainn.py
hooks/: useScript.ts
migrated_prompt_history/: prompt_2026-02-11T00:49:43.174Z.json
originals/: Mityper.py
services/: audioService.ts  geminiService.ts  mbtiArchetypeService.ts  pdfService.ts  watchProfile.ts
tfm/: TFM.py  TFM_SCORER.py  tfm_analyzer.py  tfm_scoring.py
(+7 files in other folders)
